src-tauri/build_error_utf8.txt
cargo :     Checking corex v0.1.0 (E
:\ai-desktop\local-ai\src-tauri)
At line:1 char:1
+ cargo check > build_error.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: (    Checking co...l-a  
  i\src-tauri):String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
warning: use of deprecated unit vari
ant `llama_cpp_2::model::Special::To
kenize`: This enum is a mixture of o
ptions for llama cpp providing less 
flexibility it only used with deprec
ated methods and will be removed in 
the future.
   --> src\gguf.rs:433:74
    |
433 |         match model.token_to_s
tr(*token_id, llama_cpp_2::model::Sp
ecial::Tokenize) {
    |                               
                                    
       ^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on
 by default

warning: use of deprecated method `l
lama_cpp_2::model::LlamaModel::token
_to_str`: Use `token_to_piece` inste
ad
   --> src\gguf.rs:433:21
    |
433 |         match model.token_to_s
tr(*token_id, llama_cpp_2::model::Sp
ecial::Tokenize) {
    |                     ^^^^^^^^^^
^^

error[E0609]: no field `model` on ty
pe `std::sync::MutexGuard<'_, GgufSt
ate>`
  --> src\streaming.rs:35:18
   |
35 |         if state.model.is_none(
) {
   |                  ^^^^^ unknown 
field
   |
help: a field with a similar name ex
ists
   |
35 |         if state.models.is_none
() {
   |                       +

error[E0061]: this function takes 5 
arguments but 4 arguments were suppl
ied
   --> src\streaming.rs:47:20
    |
 47 |     let response = crate::gguf
::chat_with_gguf_model(
    |                    ^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^
...
 50 |         request.max_tokens.unw
rap_or(2000) as u32,
    |         ----------------------
------------------- argument #3 of t
ype `std::string::String` is missing
    |
note: function defined here
   --> src\gguf.rs:207:14
    |
207 | pub async fn chat_with_gguf_mo
del(
    |              ^^^^^^^^^^^^^^^^^
^^^
...
210 |     prompt: String,
    |     --------------
help: provide the argument
    |
 47 |     let response = crate::gguf
::chat_with_gguf_model(
 48 |         gguf_state,
 49 |         request.prompt.clone()
,
 50 ~         /* std::string::String
 */,
 51 ~         request.max_tokens.unw
rap_or(2000) as u32,
    |

Some errors have detailed explanatio
ns: E0061, E0609.
For more information about an error,
 try `rustc --explain E0061`.
warning: `corex` (lib) generated 2 w
arnings
error: could not compile `corex` (li
b) due to 2 previous errors; 2 warni
ngs emitted

